# hans-wehr-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: import_db.py  ocr_pages.py  parse_rtf.py  probe_pdf.py  resolve_xrefs.py  verify_ocr.py
src/hans_wehr/db/: queries.py  schema.sql
src/hans_wehr/mcp/: server.py
src/hans_wehr/pipeline/: llm_refine.py  parser.py
src/pipeline/: llm_refine.py
src/validation/: root_count.py
tests/: test_parser.py  test_rtf_parser.py
