[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hans-wehr-mcp"
version = "0.1.0"
description = "MCP server exposing the Hans Wehr Arabic-English Dictionary as queryable tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # MCP server — the only true runtime dependency
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# ── Cloud pipeline ────────────────────────────────────────────────────────────
# Full pipeline using the Anthropic API for LLM refinement.
# Install with:  uv pip install hans-wehr-mcp[pipeline]
pipeline = [
    "PyMuPDF>=1.24.0",
    "anthropic>=0.40.0",
    "sqlite-utils>=3.37",
    "rich>=13.0.0",
    "typer>=0.12.0",
    # OCR verification layer — cross-checks Vision/Tesseract output
    # Also requires: brew install tesseract tesseract-lang  (macOS)
    #                apt install tesseract-ocr tesseract-ocr-ara (Ubuntu)
    "ocrmypdf>=16.0.0",
]
# ── On-device pipeline (macOS Apple Silicon, zero API cost) ───────────────────
# Uses macOS Vision framework for OCR + Ollama for LLM refinement.
# Requires: brew install ollama && ollama pull qwen2.5:7b
#           brew install tesseract tesseract-lang   (for verify_ocr.py)
# Install with:  uv pip install hans-wehr-mcp[pipeline-local]
pipeline-local = [
    "PyMuPDF>=1.24.0",
    "sqlite-utils>=3.37",
    "rich>=13.0.0",
    "typer>=0.12.0",
    # macOS Vision + Quartz for on-device OCR (scanned PDF path only)
    "pyobjc-framework-Vision>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    # OCR verification layer — cross-checks Vision/Tesseract output
    # Also requires: brew install tesseract tesseract-lang
    "ocrmypdf>=16.0.0",
]
# ── Dev ───────────────────────────────────────────────────────────────────────
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
# Step 0 — pre-flight check (run before anything else)
hans-probe    = "scripts.probe_pdf:app"
# Main pipeline commands (steps 1–4)
hans-extract  = "hans_wehr.pipeline.extract:app"
hans-ocr      = "scripts.ocr_pages:app"
hans-verify-ocr = "scripts.verify_ocr:app"
hans-parse    = "hans_wehr.pipeline.parser:app"
hans-refine   = "hans_wehr.pipeline.llm_refine:app"
hans-import   = "scripts.import_db:app"
# Step 5 — post-import cross-reference resolution
hans-resolve-xrefs = "scripts.resolve_xrefs:app"
# Step 6 — accuracy validation
hans-validate = "hans_wehr.validation.report:app"
# MCP server entry point
hans-mcp      = "hans_wehr.mcp.server:main"

[tool.hatch.build.targets.wheel]
# hans_wehr is the installable library package.
# scripts/ is included so its CLI entry points (hans-import, hans-probe, etc.)
# are importable when the wheel is installed.
packages = ["src/hans_wehr", "scripts"]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# ---------------------------------------------------------------------------
# Ruff linter / formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["hans_wehr"]

# ---------------------------------------------------------------------------
# mypy type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"
# "src" makes `hans_wehr` importable without a full install.
# "."  makes `scripts` importable (needed by test_mcp_server monkeypatching).
pythonpath = ["src", "."]
